--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -25,5 +25,7 @@
             </a>
         </div>
 
+        <div class="fb-page" data-href="https://www.facebook.com/hootcoffee/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/hootcoffee/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/hootcoffee/">HOOT</a></blockquote></div>
+
     </div>
 </section>
