--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,10 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+            <h1>HOOT Coffee House</h1>
             <hr>
-            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+            <p>"HOOT" {coffee-tea-sodas} is a hipsters paradise of creativeness, with an emphasis on coffee, tea, special custom carbonated sodas. 6831 Lonetree Blvd, Ste 101
+Rocklin, California | (916) 521-9728</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>
